# my-logging-monitoring

./: .env  .gitignore  docker-compose.dev.yml  prometheus.yml  promtail-config.yml  pyproject.toml  txt.txt
backend/: Dockerfile.backend  engine.py  main.py  metrics.py  migrate.py  models.py  pyproject.toml
grafana/: dashboard.json  datasources.yml
