[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "vlad-yarko",email = "vladyarik88888@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
